Chore(heroku-setup): Deploy and set up base application on heroku
- add procfile
- upgrade to django 2.1.4
- add runtime as python 3.6
- configure url-resolvers to use path

[Finishes #162949067]

--- a/app.json
+++ b/app.json
@@ -5,6 +5,21 @@
   "env": {
     "DISABLE_COLLECTSTATIC": {
       "required": true
+    },
+    "DB_NAME":{
+      "required": true
+    },
+    "DB_HOST":{
+      "required": true
+    },
+    "DB_USER":{
+      "required": true
+    },
+    "DB_PASS":{
+      "required": true
+    },
+    "DJANGO_SETTINGS_MODULE":{
+      "required": true
     }
   },
   "formation": {
