--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,14 @@ env:
 install:
   - pip install -r requirements.txt
 
+services:
+  - postgresql
+
+before_script:
+  - psql -c "create database authors_haven_test;" -U postgres
+  - psql -c "CREATE USER tester WITH PASSWORD 'tester';" -U postgres
+  - psql -c "ALTER USER tester CREATEDB;" -U postgres
+
 # make migrations and run tests
 script:
   - python manage.py makemigrations
