--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_script:
 script:
   - python manage.py makemigrations
   - python manage.py migrate
-  - python manage.py test
+  - coverage run --source=authors/ manage.py test
+  - coverage report
 
 # produce coverage report
 after_success:
