--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,10 @@ MarkupSafe==1.1.0
 openapi-codec==1.3.2
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
+pycodestyle==2.4.0
+pyflakes==2.0.0
 PyJWT==1.7.1
+pylint==2.2.2
 pytz==2018.9
 requests==2.21.0
 simplejson==3.16.0
