feat(set up jwt): user should receive jwt
- implement jwt authentication
- add flake8 linting tool

[Finishes #162949070]

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,7 @@
-DB_NAME=sample_dbname
-DB_USER=sample_dbuser
-DB_PASS=password
-DB_HOST=localhost
-DB_PORT=sample_port_eg_5432
+source env/bin/activate
+export DB_NAME="database_name"
+export DB_USER="sample_username"
+export DB_PASS="sample_password"
+export DB_HOST="host_name_eg_localhost"
+export DB_PORT="port_number_eg_5432"
+export TIME_DELTA="30"
