feat(reset password): reset password via email
- configure and set up smtp settings
- create forgotpassword serializer
- create resetpassword serializer
- create forgotpassword view
- adds gmail smtp
- refactors code to use gmail smtp to send emails
- create reset password done html template
- styles password reset html template
- adds forgot reset password view
- changes http status code from 201 to 200
- fix  http status code error
- add collectstatic to travis.yml
- update env_example file with new variables
- update readme file to reflect new env file

[Feature #162949073]

--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,7 @@ export DB_PASS="sample_password"
 export DB_HOST="host_name_eg_localhost"
 export DB_PORT="port_number_eg_5432"
 export TIME_DELTA="30"
+export EMAIL_HOST="smtp.gmail.com"
+export EMAIL_HOST_USER="testmail@mail.com"
+export EMAIL_HOST_PASSWORD="pass21234"
+export EMAIL_PORT=587
