--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
 script:
   - python manage.py makemigrations
   - python manage.py migrate
+  - python manage.py collectstatic
   - coverage run --source=authors/ manage.py test
   - coverage report
 
