feat(auth-social): enable social login
- install dependencies django-rest-auth and django-allauth
- add rest_auth to installed apps
- add social authentication, facebook, google,twitter
- create provider auth views
- add authentication paths in authors/urls.py
- change PostgreSQL db version from 9.2 to 9.4 in .travis.yml

[#162949074]

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: python
 python:
   - "3.6"
 
+# use postgres version 9.4
+addons:
+  postgresql: "9.4"
+
 # env variables
 env:
   - DJANGO_SETTINGS_MODULE="authors.settings"
