--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ coverage==4.5.2
 coveralls==1.5.1
 defusedxml==0.5.0
 Django==2.1.4
-django-braces==1.13.0
+django-allauth==0.38.0
 django-cors-middleware==1.3.1
 django-extensions==2.1.4
-django-oauth-toolkit==1.2.0
-django-rest-framework-social-oauth2==1.1.0
+django-rest-auth==0.9.3
 django-rest-swagger==2.2.0
 djangorestframework==3.9.0
 docopt==0.6.2
+flake8==3.6.0
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
@@ -29,6 +29,7 @@ openapi-codec==1.3.2
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
+pyflakes==2.0.0
 PyJWT==1.7.1
 pylint==2.2.2
 python3-openid==3.1.0
@@ -37,15 +38,10 @@ requests==2.21.0
 requests-oauthlib==1.2.0
 simplejson==3.16.0
 six==1.12.0
-social-auth-app-django==3.1.0
-social-auth-core==3.0.0
 typed-ast==1.2.0
 uritemplate==3.0.0
 urllib3==1.24.1
 whitenoise==4.1.2
-<<<<<<< HEAD
 sendgrid==5.6.0
 django_inlinecss==0.1.2
-=======
 wrapt==1.11.0
->>>>>>> feat(auth-social): set-up social auth for app
