--- a/app.json
+++ b/app.json
@@ -20,6 +20,21 @@
     },
     "DJANGO_SETTINGS_MODULE":{
       "required": true
+    },
+    "EMAIL_HOST":{
+      "required": true
+    },
+    "EMAIL_HOST_USER":{
+      "required": true
+    },
+    "EMAIL_HOST_PASSWORD":{
+      "required":true
+    },
+    "EMAIL_PORT":{
+      "required": true
+    },
+    "PASSWORD_RESET_URL":{
+      "required": true
     }
   },
   "formation": {
