--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,4 @@ export EMAIL_HOST="smtp.gmail.com"
 export EMAIL_HOST_USER="testmail@mail.com"
 export EMAIL_HOST_PASSWORD="pass21234"
 export EMAIL_PORT=587
+export GOOGLE_CALLBACK_URL="google_callback_url_here"
