feat(userProfiles): add more tests and complete profiles functionality
- test update user profile
- complete user profile fucntionality
- update readme file
[Finishes #162949075]

--- a/app.json
+++ b/app.json
@@ -35,6 +35,15 @@
     },
     "PASSWORD_RESET_URL":{
       "required": true
+    },
+    "CLOUDINARY_NAME":{
+      "required":true
+    },
+    "CLOUDINARY_KEY":{
+      "required":true
+    },
+    "CLOUDINARY_SECRET":{
+      "required":true
     }
   },
   "formation": {
