--- a/requirements.txt
+++ b/requirements.txt
@@ -47,4 +47,5 @@ django_inlinecss==0.1.2
 wrapt==1.11.0
 Pillow==5.3.0
 cloudinary==1.15.0
-
+django-taggit==0.23.0
+django-taggit-serializer==0.1.7
