--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 astroid==2.1.0
 autopep8==1.4.3
+beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
+cloudinary==1.15.0
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.2
 coveralls==1.5.1
+cssutils==1.0.2
 defusedxml==0.5.0
 Django==2.1.4
 django-allauth==0.38.0
 django-cors-middleware==1.3.1
 django-extensions==2.1.4
+django-filter==2.1.0
+django-inlinecss==0.1.2
 django-rest-auth==0.9.3
 django-rest-swagger==2.2.0
+django-taggit==0.23.0
+django-taggit-serializer==0.1.7
 djangorestframework==3.9.0
 docopt==0.6.2
 flake8==3.6.0
@@ -24,28 +31,29 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+mock==2.0.0
 oauthlib==3.0.0
 openapi-codec==1.3.2
+pbr==5.1.1
+Pillow==5.3.0
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
 pyflakes==2.0.0
 PyJWT==1.7.1
 pylint==2.2.2
+pynliner3==0.6
+python-http-client==3.1.0
 python3-openid==3.1.0
 pytz==2018.9
 requests==2.21.0
 requests-oauthlib==1.2.0
+sendgrid==5.6.0
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.7.3
 typed-ast==1.2.0
 uritemplate==3.0.0
 urllib3==1.24.1
 whitenoise==4.1.2
-sendgrid==5.6.0
-django_inlinecss==0.1.2
 wrapt==1.11.0
-Pillow==5.3.0
-cloudinary==1.15.0
-django-taggit==0.23.0
-django-taggit-serializer==0.1.7
