bug(socialauth): login with social auth providers
- Implement single url for social login
- Auth providers: Google, Facebook, Twitter

[Finishes #164046332]

--- a/.env_example
+++ b/.env_example
@@ -9,4 +9,14 @@ export EMAIL_HOST="smtp.gmail.com"
 export EMAIL_HOST_USER="testmail@mail.com"
 export EMAIL_HOST_PASSWORD="pass21234"
 export EMAIL_PORT=587
-export GOOGLE_CALLBACK_URL="google_callback_url_here"
+
+export FACEBOOK_APP_ID="obtained_facebook_app_id"
+export FACEBOOK_APP_SECRET="obtained_facebook_app_secret"
+export GOOGLE_KEY="obtained_google_app_secret"
+export GOOGLE_SECRET="obtained_google_secret"
+export TWITTER_KEY="obtained_twitter_key" 
+export TWITTER_SECRET="obtained_twitter_secret"
+export GOOGLE_ACCESS_TOKEN="obtained_google_access_token"
+export FACEBOOK_ACCESS_TOKEN="obtained_facebook_access_token"
+export TWITTER_ACCESS_TOKEN="obtained_twitter_access_token"
+export TWITTER_SECRET_TOKEN="obtained_twitter_access_secret_token"
