--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,19 @@ cssutils==1.0.2
 defusedxml==0.5.0
 Django==2.1.4
 django-allauth==0.38.0
+django-braces==1.13.0
 django-cors-middleware==1.3.1
 django-extensions==2.1.4
 django-filter==2.1.0
 django-inlinecss==0.1.2
+django-oauth-toolkit==1.2.0
 django-rest-auth==0.9.3
+django-rest-framework-social-oauth2==1.1.0
 django-rest-swagger==2.2.0
 django-taggit==0.23.0
 django-taggit-serializer==0.1.7
 djangorestframework==3.9.0
+djangorestframework-jwt==1.11.0
 docopt==0.6.2
 flake8==3.6.0
 gunicorn==19.9.0
@@ -51,6 +55,8 @@ requests-oauthlib==1.2.0
 sendgrid==5.6.0
 simplejson==3.16.0
 six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.0.0
 soupsieve==1.7.3
 typed-ast==1.2.0
 uritemplate==3.0.0
